Fixed bug #40236 (php -a function allocation eats memory)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_2@229843 c90b9560-bf6c-de11-be94-00142212c4b1